@@ -21,6 +21,8 @@ Changes in openair 1.0-0 [2013-11-21]
 	when limits within data range
 *	Clarify time zone for importing data to openair and checking
 	(see manual for details)
+*	Initial versions of functions to import EEA airbase data - see
+	newsletter/manual for details
 
 Changes in openair 0.9-0 [2013-02-13]
 =====================================
